session-12-ingress-configmaps-secrets/03-ingress/app1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
  namespace: s12
  labels:
    app: app1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
        - name: echo
          image: hashicorp/http-echo:1.0
          args:
            - "-listen=:5678"
            - "-text=Hello from APP1 (pod $(POD_NAME))"
          ports:
            - containerPort: 5678
          resources:
            requests: { cpu: "5m", memory: "8Mi" }
            limits:   { cpu: "50m", memory: "32Mi" }
---
apiVersion: v1
kind: Service
metadata:
  name: app1-service
  namespace: s12
spec:
  type: ClusterIP
  selector:
    app: app1
  ports:
    - name: http
      port: 80
      targetPort: 5678
